2009-02-14  David Engster  <dengste@eml.cc>

	* sb-slashdot.el (shimbun-slashdot-regexp-section-id-subject): Adapted
	regexp.

2009-01-28  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-tech-on.el (shimbun-multi-next-url): Fix regexp matching next
	buttons.

2009-01-21  ARISAWA Akihiro  <ari@mbf.sphere.ne.jp>

	* sb-rss.el (shimbun-rss-initialize-ignored-subject): New function.
	(initialize-instance): Use it.

	* sb-itmedia.el (shimbun-itmedia): Reverted.
	(initialize-instance): New overriden method.

	* sb-opentechpress-jp.el (shimbun-opentechpress-jp): Reverted.
	(initialize-instance): New overriden method.

2009-01-19  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* sb-opentechpress-jp.el (shimbun-opentechpress-jp): Switch the order
	of parent classes.

2009-01-19  ARISAWA Akihiro  <ari@mbf.sphere.ne.jp>

	* sb-itmedia.el (shimbun-itmedia): Switch the order of parent classes.

2009-01-15  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* sb-opentechpress-jp.el (shimbun-opentechpress-jp-content-start)
	(shimbun-opentechpress-jp-content-end)
	(shimbun-multi-next-url)
	(shimbun-multi-clear-contents)
	(shimbun-clear-contents): Follow the site design change.
	(shimbun-opentechpress-jp-ignored-subject): New variable.

2009-01-08  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-nikkei.el (shimbun-nikkei-group-table): Update url for it.pc.
	(shimbun-nikkei-get-headers-it-pc): Rewrite.

2008-12-25  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun.el (shimbun-headers-1): New function to support refresh.
	(shimbun-headers): Use it.

	* sb-slashdot.el (shimbun-slashdot-get-headers): Don't use
	member-ignore-case that's unavailable in XEmacs 21.4.

2008-12-23  David Engster  <dengste@eml.cc>

	* sb-sueddeutsche-de.el (shimbun-sueddeutsche-de-group-url): Removed
	kino group since feed is broken.
	(shimbun-get-headers, shimbun-rss-build-message-id): Adapt to new URL
	scheme.

	* sb-slashdot.el (sb-multi): Removed.
	(shimbun-slashdot-group-url): Changed frontpage URL.